@@ -1,5 +1,8 @@
 2003-05-13  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* ftp.c (_ftp_update_transfer): add missing argument to
+	disp_status call.
+	
 	* ftp.c (ftp_reconnect): _ftp_port and _ftp_user may well be NULL.
 
 	* util.c (noalloc_basename): move basename replacement function
